k8s/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: p2-docs
  name: p2-docs
  namespace: prod-p2-docs
spec:
  rules:
    - host: docs.p2.beryju.org
      http:
        paths:
          - backend:
              serviceName: p2-docs-http
              servicePort: http
            path: /
  tls:
    - hosts:
        - docs.p2.beryju.org
      secretName: p2-docs-acme
